--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -19,8 +19,8 @@
   
     <div class="row">
     
-      <div class="col-md-6 mt-1" *ngFor="let p of allTable; let i=index;index as io">
-        <button type="button" (click)='year($event)' value={{p}} class="btn btn-outline-success">{{p}}</button>
+      <div class="col-md-6 mt-1" *ngFor="let p of allTable; let i=index;">
+        <button type="button" [ngClass]="{'active': isActive}" (click)='year($event,i)' value={{p}} class="btn btn-outline-success">{{p}}</button>
         </div>
         </div>
         </div>
